# llm-presentation

./: .gitignore  README.md  hello.py  my-llm.ipynb  pyproject.toml  setup.ps1  setup.sh
presentation/: latexmkrc  main.tex
presentation/sections/: 01-tokenization.tex  02-embeddings.tex  03-attention.tex
