[project]
name = "llm-presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.5.1",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
